# dynamic-matrix

./: Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
dynamic_matrix/: all.html  index.html  macro.dynamic_matrix!.html  macro.dynamic_matrix.html  sidebar-items.js  struct.DynamicMatrix.html
dynamic_matrix/errors/: index.html  sidebar-items.js
dynamic_matrix/errors/indexing_error/: index.html  sidebar-items.js  struct.IndexingError.html
dynamic_matrix/errors/shape_error/: index.html  sidebar-items.js  struct.ShapeError.html
dynamic_matrix/row_major/: struct.DynamicMatrix.html
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/index/: trait.Index.js  trait.IndexMut.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/: errors.rs  lib.rs  row_major.rs
src/dynamic/: mod.rs  row_major.rs
src/dynamic_matrix/: lib.rs.html  row_major.rs.html
src/dynamic_matrix/errors/: indexing_error.rs.html  mod.rs.html  shape_error.rs.html
src/errors/: indexing_error.rs  mod.rs  shape_error.rs
