[package]
authors = ["Archit Bhonsle <abhonsle2000@gmail.com"]
categories = ["data-structures"]
description = "A simple crate to work with matrices"
edition = "2021"
keywords = ["matrices"]
license = "Apache-2.0"
name = "dynamic-matrix"
repository = "https://github.com/ArchitBhonsle/simple-matrices"
version = "0.1.0"
